<resources>
    <!--String login -->
    <string name="app_name">AppClientes</string>
    <string name="EmailLogin">Introduzca su email.</string>
    <string name="passwordLogin">Introduzca su contraseña.</string>
    <string name="Entrar">Entrar</string>
    <string name="OlvidoContra">¿Olvido su contraseña?</string>
    <!--String menu funcionalidades-->
    <string name="Perfil">Perfil</string>
    <string name="PartesHoras">Partes horas</string>
    <string name="Fichajes">Fichajes</string>
    <string name="Proyectos">Proyectos</string>
    <string name="Logout">Salir</string>
    <!--Olvido contra-->
    <string name="EmailOlvidoContra">Introduzca su email.</string>
    <string name="contra1">Introduzca la nueva contraseña.</string>
    <string name="contra2">Introduzca de nuevo la contraseña.</string>
    <string name="buttonCambiarContra">Cambiar contraseña</string>
    <string name="CambioDeContrasena">Cambio de contraseña exitoso</string>
    <string name="dastosVaciosLogin">Los datos estan vacios, comprueba que rellenaste todos.</string>
    <string name="pass9caracteres">La contraseña debe tener al menos 9 caracteres.</string>
    <string name="inicioSesionCorrecto">Inicio de sesion correcto.</string>
    <string name="contrasenas_iguales">Las contraseñas deben ser iguales.</string>
    <!--String perfil-->
    <string name="nombre_perfil">Nombre de perfil de usuario:</string>
    <string name="perfil_telefono">Telefono de perfil del usuario:</string>
    <string name="puesto_perfil">Puesto del usuario:</string>
    <string name="empresa_perfil">Empresa:</string>
    <string name="email_perfil">Correo perfil:</string>
    <!--PopupPerfil-->
    <string name="Nombre">Cambiar nombre</string>
    <string name="correoPerfil">Cambiar correo</string>
    <string name="telefonoPerfil">Cambiar telefono</string>
    <string name="puestoPerfil">Cambiar puesto</string>
    <string name="btnCambiarUsuario">Cambiar puesto</string>
    <!--String Partes horas-->
    <string name="InsertarParteHoras">Insertar parte</string>
    <string name="buscador">Busca tu parte de horas...</string>
    <string name="dastosVacios">Los datos estan vacios</string>
    <string name="mostrarPartesHoras">Mostrar partes</string>
    <!--Proyectos-->
    <string name="proyectos">Los proyectos del usuario:</string>
    <!--Fichajes-->
    <string name="MostarFichajes">Mostrar ultimos fichajes</string>
    <string name="pulsameParaFichar">Pulsame para fichar</string>
    <!--Compras-->

    <!--Ventas-->

    <!--Tareas -->
    <string name="buscadorTareas">Buscar tareas...</string>
    <!--Showpopup-->
    <string name="insertarFechaInicio">Fecha inicio</string>
    <string name="insertarFechaFinal">Fecha final</string>
    <string name="insertarHoraInicial">Hora inicio</string>
    <string name="insertarHoraFinal">Hora final</string>
    <string name="Seleccionar_proyectos">Seleccionar proyectos</string>
    <string name="btnSubirParte">Subir parte</string>
    <!--Buscador usuarios -->
    <string name="buscaraUsuarios">Buscar usuarios...</string>
    <!--Administrador -->
    <string name="insertarUsuarioAdministrador">Insertar usuario:</string>
    <string name="borrarUsuarioAdministrador">Borrar usuario:</string>
    <string name="insertarParteHorasAdministrador">Insertar parte horas:</string>
    <string name="borrarFichajesAdmonostrador">Borrar fichaje:</string>
    <string name="borrarParteHorasAdministrador">Borrar parte horas:</string>
    <string name="borrarProyectosAdministrador">Borrar proyecto:</string>
    <string name="mostratProyectosAdministrador">Mostrar proyectos:</string>

    <!--Pop Up Administrador -->
    <string name="insertarNombreAdministrador">Insertar nombre</string>
    <string name="insertarcontrasenaAdministrador">Insertar contrasena</string>
    <string name="btnInsertarUsuarioadmimnistrador">Insertar usuario</string>
    <string name="btnInsertarParteHorasAdmimnistrador">Insertar parte horas</string>
    <string name="btnborraParteHorasAdmimnistrador">Borrar parte horas</string>
    <string name="btnborraFichajesAdmimnistrador">Borrar fichaje</string>
    <string name="btnBorrarPoyectoAdmimnistrador">Borrar proyecto</string>
    <string name="btnMostarPoyectoAdmimnistrador">Mostar proyecto</string>
    <string name="btnborrarUsuarioAdministrador">Borrar usuario</string>
    <string name="empleado">Insertar empleado</string>
    <string name="horas">Insertar horas</string>
    <string name="seleccionarProyecto">Seleccionar proyecto</string>
    <string name="seleccionarTarea">Seleccionar tarea</string>
    <string name="diaInicio">Seleccione un dia de inicio</string>
    <string name="diaFinal">Seleccione un dia de finalizacion</string>
    <string name="descripcion">Escriba una descripcion...</string>
    <string name="nombreProyecto">Nombre del proyecto</string>
    <string name="estadoProyecto">Estado del proyecto</string>
    <string name="btnMeterProyecto">Meter proyecto</string>
    <string name="nombreNuevoUsuarioAdministrador">Nombre usuario</string>
    <string name="correoNuevoUsuarioAdministrador">Correo del usuario</string>
    <string name="puestoNuevousuarioAdministrador">Puesto del usuario</string>
    <string name="seleccionarEmpresaNuevoUsuario">Seleccionar empresa del usuario</string>
    <string name="btnCrearUsuarioAdministrador">Crear usuario administrador</string>


</resources>