<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/degradado_color_pefil"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_gravity="end"
        android:background="@drawable/fondo_x_popup"
        android:gravity="center"
        android:hint="X"
        android:text="X"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Proyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/empleado"
            android:inputType="date" />

        <EditText
            android:id="@+id/Estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/horas"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="67dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/SeleccionarProyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/seleccionarProyecto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/SelecionarTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/seleccionarTarea"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubirProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_boton_popup"
        android:text="@string/btnborraParteHorasAdmimnistrador"
        android:textColor="@color/white" />

</LinearLayout>