<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/degradado_color_pefil"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_gravity="end"
        android:background="@drawable/fondo_x_popup"
        android:gravity="center"
        android:hint="X"
        android:text="X"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="123dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Proyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/nombreProyecto"
            android:inputType="date" />

        <EditText
            android:id="@+id/Estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/estadoProyecto"
            android:inputType="phone" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubirProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_boton_popup"
        android:text="@string/btnMeterProyecto"
        android:textColor="@color/white" />

</LinearLayout>